# wallcalendar

./: Cargo.toml  WallCalendar.dch  WallCalendar.dip
bin2flash/: .gitignore  Cargo.toml
bin2flash/src/: main.rs
celestial/: Cargo.toml
celestial/src/: lib.rs  moon.rs  sun.rs  weekday.rs
fw/: Cargo.toml  memory.x  openocd.cfg  openocd.gdb  upload.bat  upload.sh
fw/.cargo/: config
fw/board/: Cargo.toml
fw/board/src/: lib.rs  shared_delay.rs
fw/fw/: Cargo.toml
fw/fw/src/: bin_image.rs  gps.rs  holiday.rs  image_manager.rs  main.rs  renderer.rs  watch.rs
images/: .gitignore  README.md  WallCalendar.yml  extract_data.py  images_dl.py  layout.xcf  template.xcf
images/big_digits/: 0.xcf  1.xcf  2.xcf  3.xcf  4.xcf  5.xcf  6.xcf  7.xcf  8.xcf  9.xcf
images/months/: apr.xcf  aug.xcf  dec.xcf  feb.xcf  jan.xcf  jul.xcf  jun.xcf  mar.xcf  may.xcf  nov.xcf  oct.xcf  sep.xcf
images/moon/: moon.xcf
images/small_digits/: small_digits.xcf
images/weekdays/: fri.xcf  mon.xcf  sat.xcf  sun.xcf  thu.xcf  tue.xcf  wed.xcf
nmea/: .gitignore  Cargo.toml
nmea/src/: lib.rs
png2bin/: Cargo.toml  README.md
png2bin/src/: main.rs
