[package]
name = "bin2flash"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="3.0.0-beta.4"
log="0.4.14"
pretty_env_logger = "0.4.0"
humansize = "1.1.1"
byteorder = "1.4.3"
anyhow = "1.0.44"
thiserror = "1.0.29"
