[package]
name = "png2bin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="3.0.0-beta.4"
log="0.4.14"
pretty_env_logger = "0.4.0"
png = "0.17.1"
humansize = "1.1.1"
bit_field="0.10.1"
lzss = "0.8.2"
byteorder = "1.4.3"
anyhow = "1.0.44"
thiserror = "1.0.29"
