[package]
name = "board"
version = "0.1.0"
authors = ["Denis Chaplygin <akashihi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "*"
embedded-hal = "*"
bme280 = "0.2.1"

[dependencies.stm32l4xx-hal]
version = "*"
git = "https://github.com/stm32-rs/stm32l4xx-hal"
branch = "master"
features = ["stm32l4x6", "rt"]

[dependencies.epd-waveshare]
version = "*"
git = "https://github.com/akashihi/epd-waveshare"
branch = "main"

# Allows to use 'cargo fix'
[lib]
name = "board"
test = false
bench = false
