[package]
name = "fw"
version = "0.1.0"
authors = ["Denis Chaplygin <akashihi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
# panic-halt = "*"
panic-semihosting = "*"
embedded-hal = "*"
heapless = { version = "*", features = ["ufmt-impl"]}
ufmt = "*"
cortex-m-semihosting = "0.3.7"
embedded-graphics = "*"
bit_field="0.10.1"
board = { path = "../board" }
nmea = { path = "../../nmea", default-features = false }
celestial = { path = "../../celestial",default-features = false }

[dependencies.epd-waveshare]
version = "*"
git = "https://github.com/akashihi/epd-waveshare"
#path = "f:/epd-waveshare"
branch = "main"

# Allows to use 'cargo fix'
[[bin]]
name = "fw"
test = false
bench = false
